--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="aside">
             <figure>
-                <img src="assets/profile.jpg" alt="Profile">
+                <img src="assets/profile.jpg" alt="Profile Picture">
             </figure>    
         </div>
     </main>
