updated HTML webpages using semantic tags

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         </nav>
     </header>
     <main>
-        <div id="about-me">
+        <section id="about-me">
             <h3>Aspiring Web Developer</h3>
             <p>Hello! My name is Awad Sharif and I am an aspiring web developer with over 4 years of experience solving technical issues across QA/QC</p>
             <p>I graduated with a B.S. in Electrical Engineering from University of California, Irvine and have about 7 years of telecommunications job experience.</p>
             <p>Please find my contact information below!</p>
-        </div>
-        <div id="aside">
+        </section>
+        <section id="aside">
             <figure>
                 <img src="assets/profile.jpg" alt="Profile Picture">
             </figure>    
-        </div>
+        </section>
     </main>
     <footer id="contact-me">
         <ul>
