--- a/work.html
+++ b/work.html
@@ -27,31 +27,31 @@
     <main>
         <section id="portfolio">
             <section class="portfolio-card">
-                <div class="portfolio-card-description">
+                <article class="portfolio-card-description">
                     <img src="assets/refactor.jpg" alt="Refactor">
                     <a href="https://asharif123.github.io/code_refactor_hw/">Code Refactor</a>    
-                </div>
+                </article>
             </section>
 
             <section class="portfolio-card">
-                <div class="portfolio-card-description">
+                <article class="portfolio-card-description">
                     <img src="assets/amazon.JPG" alt="Refactor">
                     <a href="https://www.amazon.com/ref=nav_logo">Amazon</a>    
-                </div>
+                </article>
             </section>
 
             <section class="portfolio-card">
-                <div class="portfolio-card-description">
+                <article class="portfolio-card-description">
                     <img src="assets/Google.JPG" alt="Refactor">
                     <a href="https://www.amazon.com/ref=nav_logo">Google</a>    
-                </div>
+                </article>
             </section>
 
             <section class="portfolio-card">
-                <div class="portfolio-card-description">
+                <article class="portfolio-card-description">
                     <img src="assets/facebook.JPG" alt="Refactor">
                     <a href="https://www.facebook.com/">Facebook</a>    
-                </div>
+                </article>
             </section>
 
 
