--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section id="about-me">
-            <h3>Aspiring Web Developer</h3>
+            <h3>About Me</h3>
             <p>Hello! My name is Awad Sharif and I am an aspiring web developer with over 4 years of experience solving technical issues across QA/QC</p>
             <p>I graduated with a B.S. in Electrical Engineering from University of California, Irvine and have about 7 years of telecommunications job experience.</p>
             <p>Please find my contact information below!</p>
