updated alt tag for all images in work.html webpage

--- a/work.html
+++ b/work.html
@@ -28,28 +28,28 @@
         <section id="portfolio">
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/refactor.jpg" alt="Refactor">
+                    <img src="assets/refactor.jpg" alt="Code Refactor">
                     <a href="https://asharif123.github.io/code_refactor_hw/">Code Refactor</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/amazon.JPG" alt="Refactor">
+                    <img src="assets/amazon.JPG" alt="Amazon">
                     <a href="https://www.amazon.com/ref=nav_logo">Amazon</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/Google.JPG" alt="Refactor">
+                    <img src="assets/Google.JPG" alt="Google">
                     <a href="https://www.amazon.com/ref=nav_logo">Google</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/facebook.JPG" alt="Refactor">
+                    <img src="assets/facebook.JPG" alt="Facebook">
                     <a href="https://www.facebook.com/">Facebook</a>    
                 </article>
             </section>
