updated portfolio with latest projects

--- a/work.html
+++ b/work.html
@@ -28,29 +28,29 @@
         <section id="portfolio">
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/refactor.jpg" alt="Code Refactor">
-                    <a href="https://asharif123.github.io/code_refactor_hw/">Code Refactor</a>    
+                    <img src="assets/weather-dashboard.JPG" alt="Weather Tracker">
+                    <a href="https://asharif123.github.io/weather-dashboard/">Weather Tracker</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/amazon.JPG" alt="Amazon">
-                    <a href="https://www.amazon.com/ref=nav_logo">Amazon</a>    
+                    <img src="assets/roomfinder.JPG" alt="Roomfinder">
+                    <a href="https://asharif123.github.io/project-one/">Room Finder App</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/Google.JPG" alt="Google">
-                    <a href="https://www.amazon.com/ref=nav_logo">Google</a>    
+                    <img src="assets/code-quiz.JPG" alt="Code Quiz">
+                    <a href="https://asharif123.github.io/code-questionnaire/">Code Quiz</a>    
                 </article>
             </section>
 
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
-                    <img src="assets/facebook.JPG" alt="Facebook">
-                    <a href="https://www.facebook.com/">Facebook</a>    
+                    <img src="assets/password.JPG" alt="Password Generator">
+                    <a href="https://github.com/asharif123/password-generator">Password Creator App</a>    
                 </article>
             </section>
 
