updated max height and width on project images

--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
             <section class="portfolio-card">
                 <article class="portfolio-card-description">
                     <img src="assets/password.JPG" alt="Password Generator">
-                    <a href="https://github.com/asharif123/password-generator">Password Creator App</a>    
+                    <a href="https://github.com/asharif123/password-generator">Password App</a>    
                 </article>
             </section>
 
