--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h3>About Me</h3>
             <p>Hello! My name is Awad Sharif and I am an aspiring web developer with over 4 years of experience solving technical issues across QA/QC</p>
             <p>I graduated with a B.S. in Electrical Engineering from University of California, Irvine and have about 7 years of telecommunications job experience.</p>
-            <p>Please find my contact information below!</p>
+            <p>My goal is to utilize background in electrical engineering and experience in quality control to develop web apps with a focus on mobile-responsiveness.Strengths in creativity, communication and teamwork</p>
         </section>
         <section id="aside">
             <figure>
