--- a/work.html
+++ b/work.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
     <title>Portfolio Works Section</title>
 </head>
@@ -27,34 +30,18 @@
     <main>
         <section id="portfolio">
             <section class="portfolio-card">
-                <article class="portfolio-card-description">
-                    <img src="assets/weather-dashboard.JPG" alt="Weather Tracker">
-                    <a href="https://asharif123.github.io/weather-dashboard/">Weather Tracker</a>    
-                </article>
-            </section>
-
-            <section class="portfolio-card">
-                <article class="portfolio-card-description">
+                <div class="portfolio-card-image">
                     <img src="assets/roomfinder.JPG" alt="Roomfinder">
-                    <a href="https://asharif123.github.io/project-one/">Room Finder App</a>    
-                </article>
+                </div>
+                <div class="portfolio-card-description">
+                    <h3>Room Finder App</h3>
+                    <p>On RoomFinder, users can explore housing options nationwide using Google API and Roomster API.</p>   
+                    <p>The user enters the city, state of where they are looking and their max budget.</p>   
+                    <p>The user can also see and clear their previous search history.</p>
+                    <p>Technologies used: HTML, CSS, Javascript, Bootstrap,  Responsive Web Design, Sequelize, Express, Node.js, Tailwind</p>
+                    <a href="https://rental-finders.herokuapp.com/">Link to Deployed Project</a>   
+                </div>
             </section>
-
-            <section class="portfolio-card">
-                <article class="portfolio-card-description">
-                    <img src="assets/code-quiz.JPG" alt="Code Quiz">
-                    <a href="https://asharif123.github.io/code-questionnaire/">Code Quiz</a>    
-                </article>
-            </section>
-
-            <section class="portfolio-card">
-                <article class="portfolio-card-description">
-                    <img src="assets/password.JPG" alt="Password Generator">
-                    <a href="https://github.com/asharif123/password-generator">Password App</a>    
-                </article>
-            </section>
-
-
         </section>
     </main>
     <footer id="contact-me">
