added gradient coloring

--- a/work.html
+++ b/work.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio About Me</title>
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>Portfolio Works Section</title>
 </head>
 <body>
@@ -36,10 +31,22 @@
                 <div class="portfolio-card-description">
                     <h3>Room Finder App</h3>
                     <p>On RoomFinder, users can explore housing options nationwide using Google API and Roomster API.</p>   
-                    <p>Technologies used: HTML, CSS, Javascript, Bootstrap,  Responsive Web Design, Sequelize, Express, Node.js, Tailwind</p>
-                    <a href="https://rental-finders.herokuapp.com/">Link to Deployed Project</a>   
+                    <p>Technologies used: HTML, CSS, Javascript, Bootstrap, Sequelize, Express, Node.js, Tailwind</p>
+                    <a href="https://rental-finders.herokuapp.com/">Deployed Link</a>   
                 </div>
             </section>
+            <section class="portfolio-card">
+                <div class="portfolio-card-image">
+                    <img src="assets/weather-dashboard.JPG" alt="Roomfinder">
+                </div>
+                <div class="portfolio-card-description">
+                    <h3>Weather Dashboard</h3>
+                    <p>Users can look up temperature and 5 day forecast for any city!</p>   
+                    <p>Technologies used: HTML, CSS, Javascript, Bootstrap,  Weather API</p>
+                    <a href="https://asharif123.github.io/weather-dashboard/">Deployed Link</a>   
+                </div>
+            </section>
+
         </section>
     </main>
     <footer id="contact-me">
